fix: correções no metodo getAuthorities